# mange

./: .clang-format  .gitignore  BUILD  CMakeLists.txt  WORKSPACE
include/mange/: SE2.h  SE2.hh  SE3.h  SE3.hh  SO2.h  SO2.hh  SO3.hh  mange.h  mange.hh
include/mange/algorithm/: wahba.hh
src/mange/: SE2.cc  SE2.cpp  SE3.cc  SE3.cpp  SO2.cc  SO2.cpp  SO3.cc  SO3.cpp
src/mange/algorithm/: wahba.cc
src/mange_python/: mange_python.cc
test/: SO2.cpp  lie_group.cpp  test_mange.cc  test_mange_python.py  test_wahba.cc
